Development Portal (2019-01-04 shi)
==============================
Hide policy-marker in refine search
Display budget type for planned-disbursement
Update planned-disbursement table in SAVi
Display organisation type in transaction
Update all themes with organisation type
Update print-friendly css
Update font-size for tables in SAVi
Layout work on #506


Development Portal (2019-01-03 shi)
==============================
Fix humanitarian tag for Chrome
Add withdrawn codes to import
Display withdrawn in search dropdown
Update all css
Add humanitarian-scope to import
Display humanitarian-scope in SAVi
Update all themes with new element
Fix narrative css in location name
Display ref attributes in participating-org
Display ref attributes in provider-org
Display ref attributes in receiver-org
Update print-friendly css


Development Portal (2019-01-02 shi)
==============================
Update css for all themes with new sections
Minor css fixes
Add humanitarian tag in print-friendly css
Remove list numbers for location, policy markers, family tree


Development Portal (2018-12-19 shi)
==============================
Add activity-scope code list to iati_codes.js
Update css for all themes
Don't display activity-scope if empty
Don't display activity-status if empty
Don't display reporting-org if empty
Display humanitarian tag if declared in transaction


Development Portal (2018-12-18 shi)
==============================
Minor css fix for search title
Update print-friendly css
Update Dash css sticky title headers
Fix planned activities list header
Updated translations for planned list header


Development Portal (2018-09-27 shi)
==============================
Add commas to result values
Logic for region code display
Update print-friendly css for new elements
Update all themes css


Development Portal (2018-09-26 shi)
==============================
Added activity-scope, region code and region vocab to import


Development Portal (2018-09-24 shi)
==============================