@@ -8,6 +8,7 @@ Update all themes with organisation type
 Update print-friendly css
 Update font-size for tables in SAVi
 Layout work on #506
+Fix transaction count for new sections
 
 
 Development Portal (2019-01-03 shi)
